--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,7 @@
 {
   "О сайте": "About us",
   "Главная страница": "Main page",
-  "Страница не найдена": "Page not found"
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "Uncaught error",
+  "Обновить страницу": "Reload page"
 }
