--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "Главная страница": "Main page",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Uncaught error",
-  "Обновить страницу": "Reload page"
+  "Обновить страницу": "Reload page",
+  "Главная": "Home",
+  "Информация": "About"
 }
