--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Произошла непредвиденная ошибка": "Uncaught error",
   "Обновить страницу": "Reload page",
   "Главная": "Home",
-  "Информация": "About"
+  "Информация": "About",
+  "Войти": "Log in"
 }
