--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "Главная": "Главная",
-  "Информация": "Информация"
+  "Информация": "Информация",
+  "Войти": "Войти"
 }
