--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "Обновить страницу": "Reload page",
   "Главная": "Home",
   "Информация": "About",
-  "Войти": "Log in"
+  "Войти": "Log in",
+  "Введите логин": "Enter username",
+  "Введите пароль": "Enter password"
 }
