--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "Обновить страницу": "Обновить страницу",
   "Главная": "Главная",
   "Информация": "Информация",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Введите логин": "Введите логин",
+  "Введите пароль": "Введите пароль"
 }
