--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,9 @@
   "Информация": "Информация",
   "Войти": "Войти",
   "Введите логин": "Введите логин",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Не удалось авторизоваться": "Не удалось авторизоваться",
+  "Ошибка": "Ошибка",
+  "Форма авторизации": "Форма авторизации",
+  "Выйти": "Выйти"
 }
